tests/syntax_error/bad_toplevel_statement.jou
92  # Error: not a valid statement
